<resources>
    <string name="app_name">GorilluCodes</string>
    <string name="title_activity_maps">Map</string>
    <string name="Logo">Logo</string>

    <string name="TitleBackground">TitleBackground</string>
    <string name="About">About Us</string>
    <string name="Description">The place to come if you want to learn about Android development
    and all the soft skills that go along to becoming a successful developer.
    </string>
    <string name="Contact">Contact Us</string>
    <string name="Address1">Schwarztorstrasse 122</string>
    <string name="Address2">3007 Bern, Switzerland</string>
    <string name="Number">0041 (0) 79 325 46 88</string>
    <string name="Email">gorillucodes@gmail.com"</string>
    <string name="Website"><a href="http://gorillu.codes//">www.gorillu.codes</a></string>
    <string name="OfficeHours1">Office Hours</string>
    <string name="OfficeHours2">Mo. - Fri.: 9:00 - 17:00</string>
    <string name="VisitUs">Come visit us...</string>











    <string name="DummyText">Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Nunc cursus nisi non dui gravida, id auctor ex ultricies. Donec vehicula urna massa,
 vel dapibus sem convallis sed. Nam ultricies nulla neque, ac mattis diam pulvinar vitae.
 Sed commodo rutrum ligula, quis consequat mi luctus sed. Maecenas nibh nunc, efficitur ut
 hendrerit vitae, aliquet placerat quam. Sed non iaculis est, vitae congue turpis. Morbi sagittis
 eleifend metus sed ullamcorper. Praesent ligula ex, fringilla quis tempus id, volutpat vitae metus.Lorem ipsum dolor sit amet, consectetur adipiscing elit.
Nunc cursus nisi non dui gravida, id auctor ex ultricies. Donec vehicula urna massa,
 vel dapibus sem convallis sed. Nam ultricies nulla neque, ac mattis diam pulvinar vitae.
 Sed commodo rutrum ligula, quis consequat mi luctus sed. Maecenas nibh nunc, efficitur ut
 hendrerit vitae, aliquet placerat quam. Sed non iaculis est, vitae congue turpis. Morbi sagittis
 eleifend metus sed ullamcorper. Praesent ligula ex, fringilla quis tempus id, volutpat vitae metusLorem ipsum dolor sit amet, consectetur adipiscing elit.
Nunc cursus nisi non dui gravida, id auctor ex ultricies. Donec vehicula urna massa,
 vel dapibus sem convallis sed. Nam ultricies nulla neque, ac mattis diam pulvinar vitae.
 Sed commodo rutrum ligula, quis consequat mi luctus sed. Maecenas nibh nunc, efficitur ut
 hendrerit vitae, aliquet placerat quam. Sed non iaculis est, vitae congue turpis. Morbi sagittis
 eleifend metus sed ullamcorper. Praesent ligula ex, fringilla quis tempus id, volutpat vitae metus</string>

</resources>
