<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="#24345c">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/main"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:context=".MainActivity">


        <ImageView
            android:id="@+id/ProgrammingPicture"
            android:layout_width="0dp"
            android:layout_height="142dp"
            android:alpha="0.70"
            android:contentDescription="@string/TitleBackground"
            android:scaleType="centerCrop"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/programming_background" />

        <ImageView
            android:id="@+id/logo"
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:layout_marginEnd="24dp"
            android:background="#ede4e6"
            android:baselineAlignBottom="true"
            android:contentDescription="@string/Logo"
            android:padding="1dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="@+id/ProgrammingPicture"
            app:layout_constraintVertical_bias="0.022"
            app:srcCompat="@drawable/logo" />

        <fragment
            android:id="@+id/map"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="134dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            tools:context="codes.gorillu.SingleScreenApp.MapsActivity"/>

        <TextView
            android:id="@+id/about"
            android:layout_width="71dp"
            android:layout_height="24dp"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/About"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBaseline_toBaselineOf="@+id/description"
            app:layout_constraintEnd_toStartOf="@+id/description"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/description"
            android:layout_width="218dp"
            android:layout_height="119dp"
            android:layout_marginTop="8dp"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/Description"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/contact"
            app:layout_constraintTop_toBottomOf="@+id/logo"
            app:layout_constraintVertical_bias="0.098" />

        <TextView
            android:id="@+id/contact"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/Contact"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBaseline_toBaselineOf="@+id/address1"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/address1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/Address1"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/description"
            app:layout_constraintTop_toBottomOf="@+id/description" />

        <TextView
            android:id="@+id/address2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_light"
            android:includeFontPadding="false"
            android:text="@string/Address2"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address1"
            app:layout_constraintTop_toBottomOf="@+id/address1" />

        <TextView
            android:id="@+id/phoneNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/Number"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/address2"
            app:layout_constraintTop_toBottomOf="@+id/address2" />

        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/Email"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/phoneNumber"
            app:layout_constraintTop_toBottomOf="@+id/phoneNumber" />

        <TextView
            android:id="@+id/website"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/Website"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/email"
            app:layout_constraintTop_toBottomOf="@+id/email" />

        <TextView
            android:id="@+id/officeHours2"
            android:layout_width="202dp"
            android:layout_height="21dp"
            android:layout_marginTop="16dp"
            android:layout_marginBottom="56dp"
            android:fontFamily="@font/roboto_mono_light"
            android:text="@string/OfficeHours2"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/visit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="@+id/website"
            app:layout_constraintTop_toBottomOf="@+id/website" />

        <TextView
            android:id="@+id/officeHours1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/OfficeHours1"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBaseline_toBaselineOf="@+id/officeHours2"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/visit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="32dp"
            android:layout_marginBottom="8dp"
            android:fontFamily="@font/roboto_mono_bold"
            android:text="@string/VisitUs"
            android:textColor="#ede4e6"
            app:autoSizeTextType="uniform"
            app:layout_constraintBottom_toTopOf="@+id/map"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/officeHours1"
            app:layout_constraintVertical_bias="0.84000003" />


    </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>